# ElaWidgetTools

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
.qoder/skills/cpp-code-style/: SKILL.md
ElaWidgetToolsDemo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
ElaWidgetToolsDemo/ExamplePage/: T_Page1.cpp  T_Page1.h  T_Page2.cpp  T_Page2.h
ElaWidgetToolsExample/: CMakeLists.txt
